--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -24,7 +23,7 @@
       <section id="about-me" class="main">
         <h2>About Me</h2>
         <div class="flex-container">
-          <div class=>
+          <div class=> 
             <img src="assets/images/IMG_5112.jpg" id="ouab" />
           </div>
           <div class="flex-container"> 
@@ -35,17 +34,16 @@
       </section>
 
       <section id="my-work" class="main">
-        <h2>My Work</h2>
+        <h1>My Work</h1>
         <div class="flex-container">
-       
             <section class="card1" id="main-project"></section>
-              <h2>Horiseon</h2>
-              <h3>HTML and CSS</h3>
+              <h2> </h2>
+             
             </section>
           </a>
           <a
-          class="flex-item"
-          href="https://banksandrew16.github.io/run-buddy1/"
+          class="flex-container"
+          href="https://patsax.github.io/Night-Picks/"
           target="_blank"
         >
           <section class="card2" id="main-project">
@@ -54,36 +52,35 @@
           </section>
         </a>
           <a
-            class="flex-item"
-            href="https://patsax.github.io/Night-Picks/"
-            target="_blank"
-          >
-            <section class="card3" id="main-project">
-              <h2>Horiseon</h2>
-              <h3>HTML and CSS</h3>
-            </section>
-          </a>
-          <a
-            class="flex-item"
+            class="flex-container"
             href="https://banksandrew16.github.io/challenge-1.5/"
             target="_blank"
           >
             <section class="card4" id="main-project">
-              <h2>Work Day Scheduler</h2>
-              <h3>HTML API's and CSS</h3>
-            </section>
+              <h2>Horiseon</h2>
+              <h3>HTML API's and CSS</h3> 
+            </section>  
           </a>
           <a
-            class="flex-item"
+            class="flex-container"
             href="https://banksandrew16.github.io/stunning-broccoli/"
             target="_blank"
           >
             <section class="card5" id="main-project">
-              <h2>Run Buddy</h2>
-              <h3>HTML and CSS</h3>
+              <h2>Work Day Scheduler</h2>
+              <h3>HTML, Web API's and CSS</h3>
             </section>
           </a>
-            </section>
+          <a
+          class="flex-container"
+          href="https://banksandrew16.github.io/run-buddy1/"
+          target="_blank"
+        >
+          <section class="card2" id="main-project">
+            <h2> Run Buddy</h2>
+            <h3> HTML and CSS </h3>
+          </section>
+        </a>
           </a>
         </div>
       </section>
